tests/render_snapshots/snapshots/render_snapshots__confirm_dialogs__confirm_dialog.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  │╭ Confirm ─────────────────────────────╮                   │
│                  ││ No connection configured.            │                   │
│                  ││ Are you sure you want to quit?       │───────────────────┘
│                  ││                                      │───────────────────┐
│                  ││                                      │                   │
│                  │╰ Enter: Confirm │ Esc: Cancel ────────╯                   │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
