tests/render_snapshots/snapshots/render_snapshots__confirm_dialogs__confirm_dialog_update_preview_jsonb_key_order_normalized.snap
---
source: tests/render_snapshots/confirm_dialogs.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.po╭ Confirm UPDATE: users ───────────────────────────────╮           │
│  public.co│                                                      │           │
│           │ ✓ LOW RISK                                           │           │
│           │                                                      │           │
│           │ Diff                                                 │           │
│           │   target_audience:                                   │           │
│           │     -                                                │           │
│           │ "{\"company_size\":[\"100-500\",\"500+\"],\"industri │           │
│           │ es\":[\"technology\",\"finance\"]}"                  │───────────┘
│           │     +                                                │───────────┐
│           │ "{\"company_size\":[\"100-500\",\"600+\"],\"industri │           │
│           │ es\":[\"technology\",\"finance\"]}"                  │           │
│           │                                                      │           │
│           │ SQL Preview                                          │           │
│           │   UPDATE "public"."users"                            │           │
│           │   SET "target_audience" =                            │           │
│           │                                                      │           │
│           ╰ Enter: Confirm │ Esc: Cancel ────────────────────────╯           │
└──────────────────┘└──────────────────────────────────────────────────────────┘
