tests/render_snapshots/snapshots/render_snapshots__confirm_dialogs__confirm_dialog_update_preview_scrollable.snap
---
source: tests/render_snapshots/confirm_dialogs.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explor╭ Confirm UPDATE: users ───────────────────────────────╮            
│> public.us│                                                      │───────────┐
│  public.po│ ✓ LOW RISK                                           │           │
│  public.co│                                                      │           │
│           │ Diff                                                 │           │
│           │   a:                                                 │           │
│           │     - "old_a"                                        │           │
│           │     + "new_a"                                        │           │
│           │                                                      │           │
│           │   b:                                                 │           │
│           │     - "old_b"                                        │───────────┘
│           │     + "new_b"                                        │───────────┐
│           │                                                      │           │
│           │   c:                                                 │           │
│           │     - "old_c"                                        │           │
│           │     + "new_c"                                        │           │
│           │                                                      │           │
│           │   d:                                                 │           │
│           │     - "old_d"                                        │           │
│           │     + "new_d"                                        │           │
└───────────│                                                      │───────────┘
            ╰ j/k: Scroll │ Enter: Confirm │ Esc: Cancel ──────────╯
